objects/ASI_GiftBox_Budget__c.object
<CustomObject>
    <fields>
        <fullName>ASI_GiftBox_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift Box Master</label>
        <referenceTo>ASI_GiftBox_Inventory_Master__c</referenceTo>
        <relationshipLabel>Gift Box Budgets</relationshipLabel>
        <relationshipName>Gift_Box_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Usage_Complete__c</fullName>
        <label>Usage - Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Usage__c</fullName>
        <label>Usage - Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Gift Box Budget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_GiftBox_Fiscal_Year__c</columns>
        <columns>ASI_GiftBox_Master__c</columns>
        <columns>ASI_GiftBox_Quantity__c</columns>
        <columns>ASI_GiftBox_Region__c</columns>
        <columns>ASI_GiftBox_Usage__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>GBB-{0000000}</displayFormat>
        <label>Budget Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Box Budgets</pluralLabel>
    <recordTypes>
        <fullName>ASI_Gift_Box_VN_Budget</fullName>
        <active>true</active>
        <label>ASI Gift Box VN Budget</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>